plugins
{
    id 'eclipse'
    id 'java-library'
}

//

java.toolchain.languageVersion = JavaLanguageVersion.of(16)
java.modularity.inferModulePath = true

repositories.mavenCentral()

dependencies
{
    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.13.3'
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.6.2'
}

eclipse.classpath.containers 'org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/loom'

//

tasks.withType(JavaCompile) 
{
    options.release = 16
    options.compilerArgs += '--enable-preview'
}

tasks.withType(Test) 
{
    jvmArgs += "--enable-preview"
    useJUnitPlatform()
}
